k8s/pipeline/pipeline.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: llm-chatbot-webhook
  namespace: llm-chatbot
  labels:
    app: llm-chatbot
    app.kubernetes.io/component: webhook
spec:
  to:
    kind: Service
    name: el-llm-chatbot-listener
    weight: 100
  port:
    targetPort: http-listener
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
